test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws9-svc-news
  namespace: aws9c
spec:
  replicas: 1
  selector:
    matchLabels:
      color: yello    # (1)Pod 작성시 이 부분(label -> app: web)이 포함되어야 함
  template:   # 여기에서 부터 Pod 작성
    metadata:
      labels:
        color: yello  # 반드시 (1) 과 동일해야 함
    spec:
      containers:
        - name: aws9ctn-yello
          image: hub.aws9.pri/aws9/yello
---
apiVersion: v1
kind: Service
metadata:
  name: aws9-svc-news
  namespace: aws9c
spec:
  ports:
  - name: aws9-port-news
    port: 80       # cluster-ip 의 포트 번호
    protocol: TCP
    targetPort: 80    # 컨테이너의 포트
  selector:
